--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,21 +16,21 @@ services:
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
-  postgres-auth:
+  postgres-account:
     image: "postgres:alpine"
     environment:
       - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
     volumes:
-      - "pgdata_auth:/var/lib/postgresql/data"
+      - "pgdata_account:/var/lib/postgresql/data"
     command: ["postgres", "-c", "log_statement=all"]
   account:
     build:
       context: ./account
       target: builder
     image: account
-    env_file: .env.dev
+    env_file: ./account/.env.dev
     expose:
       - "8080"
     labels:
@@ -42,7 +42,7 @@ services:
       - ./account:/go/src/app
     # have to use $$ (double-dollar) so docker doesn't try to substitute a variable
     depends_on:
-      - postgres-auth
+      - postgres-account
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
 volumes:
-  pgdata_auth:
+  pgdata_account:
