--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,12 @@ services:
     volumes:
       - "pgdata_account:/var/lib/postgresql/data"
     command: ["postgres", "-c", "log_statement=all"]
+  redis-account:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "redisdata:/data"
   account:
     build:
       context: ./account
@@ -43,6 +49,8 @@ services:
     # have to use $$ (double-dollar) so docker doesn't try to substitute a variable
     depends_on:
       - postgres-account
+      - redis-account
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
 volumes:
   pgdata_account:
+  redisdata:
